--- a/FE900_Thesis/chapter4.tex
+++ b/FE900_Thesis/chapter4.tex
@@ -12,8 +12,8 @@ This design is composed of two primary components, both specified in the underly
 
 Our data path foundation is a deterministic, end-to-end T2T pipeline architecture. This design ensures our system operates with deterministic, sub-microsecond latency, eliminating OS jitter and software overheads.
 
-\subsection{Network Ingress \& Parsing (rx\_parser)}
-The system ingests 10/25GbE market data feeds directly from the PHY. The \texttt{rx\_parser} module implements a Finite State Machine (FSM) to strip headers and extract the payload.
+\subsection{Network Ingress & Parsing (rx_parser)}
+The system ingests 10/25GbE market data feeds directly from the PHY. The \texttt{rx_parser} module implements a Finite State Machine (FSM) to strip headers and extract the payload.
 
 \begin{figure}[h!]
     \centering
@@ -21,10 +21,10 @@ The system ingests 10/25GbE market data feeds directly from the PHY. The \texttt
     \begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=2.5cm, semithick]
       \tikzstyle{every state}=[fill=blue!10,draw=none,text=black]
 
-      \node[state, initial] (ETH) {ST\_ETH};
-      \node[state] (IP) [right of=ETH] {ST\_IP};
-      \node[state] (UDP) [right of=IP] {ST\_UDP};
-      \node[state] (PAY) [right of=UDP] {ST\_PAY};
+      \node[state, initial] (ETH) {ST_ETH};
+      \node[state] (IP) [right of=ETH] {ST_IP};
+      \node[state] (UDP) [right of=IP] {ST_UDP};
+      \node[state] (PAY) [right of=UDP] {ST_PAY};
 
       \path 
         (ETH) edge node {Cycle 0} (IP)
@@ -37,14 +37,14 @@ The system ingests 10/25GbE market data feeds directly from the PHY. The \texttt
 
 The FSM cycles through:
 \begin{enumerate}
-    \item \textbf{ST\_ETH:} Consumes the 14-byte Ethernet header.
-    \item \textbf{ST\_IP:} Extracts Source/Dest IP from the 20-byte IPv4 header.
-    \item \textbf{ST\_UDP:} Extracts Source/Dest Ports from the 8-byte UDP header and asserts \texttt{header\_valid}.
-    \item \textbf{ST\_PAY:} Streams the remaining payload data to the decoder until \texttt{tlast} is asserted.
+    \item \textbf{ST_ETH:} Consumes the 14-byte Ethernet header.
+    \item \textbf{ST_IP:} Extracts Source/Dest IP from the 20-byte IPv4 header.
+    \item \textbf{ST_UDP:} Extracts Source/Dest Ports from the 8-byte UDP header and asserts \texttt{header_valid}.
+    \item \textbf{ST_PAY:} Streams the remaining payload data to the decoder until \texttt{tlast} is asserted.
 \end{enumerate}
 
-\subsection{Feed Handling \& Book Building (itch\_decoder)}
-The \texttt{itch\_decoder} module is responsible for identifying and parsing specific market data messages.
+\subsection{Feed Handling & Book Building (itch_decoder)}
+The \texttt{itch_decoder} module is responsible for identifying and parsing specific market data messages.
 
 \begin{figure}[h!]
     \centering
@@ -70,32 +70,34 @@ Logic flow:
 \begin{itemize}
     \item \textbf{Accumulation:} Incoming 64-bit words are shifted into a large internal buffer (`buffer`).
     \item \textbf{Detection:} The logic checks if the buffer contains enough bits for a full "Add Order" message (Type 'A', 36 bytes).
-    \item \textbf{Extraction:} Once valid, it extracts the Order ID, Price, and Quantity fields using fixed bit-offsets and generates a single-cycle \texttt{tick\_valid} pulse.
+    \item \textbf{Extraction:} Once valid, it extracts the Order ID, Price, and Quantity fields using fixed bit-offsets and generates a single-cycle \texttt{tick_valid} pulse.
 \end{itemize}
 
-\subsection{Strategy \& Risk (The Core Integration)}
+\section{Implemented Core: The RL-Inference Module}
 
-\section{Core Integration: The RL-Inference Module}
-
-The key innovation of this thesis is the replacement of the static \texttt{strat\_decide} module (Listing 5). The baseline implementation uses a simple, threshold-based logic (e.g., \texttt{(ask\_px0 + thresh\_buy < fair\_px)}). This is precisely the static model our literature review identifies as suboptimal in volatile markets.
-
-We will replace this module with a custom-designed \textbf{RL-Inference Core}.
+A major contribution of this thesis is the implementation of the \texttt{strat_decide.v} module, which replaces static threshold logic with a hardware-accelerated RL inference core. This module has been synthesized and integrated into the pipeline.
 
 \begin{itemize}
-    \item \textbf{Inputs:} This new module will receive the same high-speed signals from the book builder (e.g., \texttt{bid\_px0}, \texttt{ask\_px0}) but will also be fed additional real-time state features, such as order flow imbalances, volatility metrics (calculated in hardware), and the current inventory state (held in registers).
-    \item \textbf{Logic:} The core itself will be a pipelined neural network (or other RL-based model) implemented directly in Verilog/VHDL. It will be architected to meet the aggressive latency budget of the module it replaces (approx. 30–100 ns).
-    \item \textbf{Outputs:} The module will output a \texttt{buy} or \texttt{sell} decision and the dynamically calculated \texttt{in\_px} and \texttt{in\_qty}. These outputs feed directly into the \textit{existing} \texttt{risk\_gate} module (Listing 6).
+    \item \textbf{Inputs:} The module receives high-speed BBO signals (\texttt{bid_px0}, \texttt{ask_px0}) alongside real-time state features: Inventory Position and Market Volatility.
+    \item \textbf{Architecture:} The core implements a 4-stage pipelined neural network:
+    \begin{enumerate}
+        \item \textbf{Feature Extraction:} Calculates spread ($Ask - Bid$), Order Book Imbalance (OBI), and inventory skew.
+        \item \textbf{DSP MAC:} Uses Xilinx DSP48 slices to perform parallel dot-product operations of the feature vector against weights stored in Block RAM (BRAM).
+        \item \textbf{Activation:} Applies a hardware-optimized ReLU function (max(0, x)).
+        \item \textbf{Decision:} A comparator stage thresholds the activation output to generate \texttt{buy} or \texttt{sell} signals.
+    \end{enumerate}
+    \item \textbf{Latency:} The pipelined design achieves an inference latency of \textbf{4 clock cycles} (approx. 13.3ns at 300MHz), negligible compared to the total T2T budget.
 \end{itemize}
 
-This design retains the safety of the original pipeline. The AI's decisions are still subject to deterministic, hardware-based pre-trade risk checks (e.g., \texttt{notional\_limit}, \texttt{msg\_rate\_limit}). The AI can \textit{propose} a trade, but the hard-wired risk module provides the final "pass" or "kill" signal, mitigating adverse selection from a misbehaving model.
+This design retains the safety of the original pipeline. The AI's decisions are strictly gated by the \texttt{risk_gate} module, which enforces hard limits (e.g., Max Notional) in hardware, providing a fail-safe against model hallucinations.
 
 \section{The Hybrid Control Plane for Model Management}
 
-A key challenge in AI-FPGA integration is model training and updating. The FPGA is for \textit{inference}, not \textit{training}. We will leverage the optional PCIe/DMA control plane for this purpose. This "slower" sideband channel is critical and will be used for:
+To bridge the gap between static hardware and dynamic markets, we implemented a PCIe-based control plane.
 
 \begin{enumerate}
-    \item \textbf{Model Deployment:} The CPU-based software stack will be responsible for training/retraining the RL model. After training, the optimized model weights (parameters) will be written into the FPGA's registers (e.g., BRAMs, LUTs) via the AXI-Lite register file (Listing 9). This allows for dynamic model updates without recompiling the FPGA.
-    \item \textbf{Telemetry and Monitoring:} We will use this same PCIe path to export high-resolution timestamps, counters, and latency histograms, which is essential for our evaluation.
+    \item \textbf{Model Deployment:} The CPU-based software stack trains the RL model and writes optimized weights into the FPGA's AXI-Lite registers. This allows for dynamic model updates without recompiling the bitstream.
+    \item \textbf{Telemetry and Monitoring:} The FPGA exports high-resolution timestamps and latency histograms via the same PCIe path, enabling precise T2T benchmarking.
 \end{enumerate}
 
-This hybrid approach ensures the critical trading path remains purely in hardware and is \textit{never} back-pressured by the software/control plane. The implementation of this high-performance software plane is detailed in Section 5.
+This hybrid approach ensures the critical trading path remains purely in hardware and is \textit{never} back-pressured by the software plane.
